--- a/index.ipynb
+++ b/index.ipynb
@@ -219,7 +219,7 @@
    ],
    "source": [
     "\"art.vandelay@vandelay.co\" # False\n",
-    "\"art.vandelay@vandelay.co\".endwsith([.com])"
+    "\"art.vandelay@vandelay.co\".endwsith(.com])"
    ]
   },
   {
